force-app/main/default/objects/Solicitudes_Retiro_Despacho__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <formula>Solicitud_de_Retiro__r.Contacto_para_Retiro__r.FirstName &amp; &quot; &quot; &amp;  Solicitud_de_Retiro__r.Contacto_para_Retiro__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>