force-app/main/default/objects/Solicitudes_Retiro_Despacho__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <formula>Solicitud_de_Retiro__r.Direcciones__r.Direccion__c&amp;&quot; &quot;&amp; Solicitud_de_Retiro__r.Direcciones__r.Ciudad__c&amp;&quot; &quot;&amp; Solicitud_de_Retiro__r.Direcciones__r.Pais__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección</label>
    <type>Text</type>
</CustomField>