force-app/main/default/objects/Solicitudes_Retiro_Despacho__c/fields/Estado_del_Retiro__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_Retiro__c</fullName>
    <label>Estado del Retiro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Ruta</fullName>
                <default>true</default>
                <label>En Ruta</label>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Retirado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>