force-app/main/default/objects/Solicitudes_Retiro_Despacho__c/fields/Fecha_Hora_Retiro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Hora_Retiro__c</fullName>
    <label>Fecha/Hora Retiro</label>
    <type>DateTime</type>
</CustomField>