force-app/main/default/objects/Solicitudes_Retiro_Despacho__c/fields/Indicaciones_para_el_Retiro__c.field-meta.xml
<CustomField>
    <fullName>Indicaciones_para_el_Retiro__c</fullName>
    <formula>Solicitud_de_Retiro__r.Indicaciones_Especiales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicaciones para el Retiro</label>
    <type>Text</type>
</CustomField>