force-app/main/default/objects/Solicitudes_Retiro_Despacho__c/fields/Rango_Horario__c.field-meta.xml
<CustomField>
    <fullName>Rango_Horario__c</fullName>
    <formula>Text(Solicitud_de_Retiro__r.Rango_Horario__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rango Horario</label>
    <type>Text</type>
</CustomField>