force-app/main/default/objects/Solicitudes_Retiro_Despacho__c/fields/Ruta__c.field-meta.xml
<CustomField>
    <fullName>Ruta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ruta</label>
    <referenceTo>Ruta__c</referenceTo>
    <relationshipName>Solicitudes_Retiro_Despacho</relationshipName>
    <type>Lookup</type>
</CustomField>