force-app/main/default/objects/Solicitudes_Retiro_Despacho__c/fields/Solicitud_de_Retiro__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_Retiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup</label>
    <referenceTo>Solicitud_de_Retiro__c</referenceTo>
    <relationshipLabel>Ruta</relationshipLabel>
    <relationshipName>Solicitudes_Retiro_Despacho</relationshipName>
    <type>Lookup</type>
</CustomField>